# advent_of_code

./: .gitignore  README.md
2020/: README.md  build.gradle
2020/day01/: Cargo.toml
2020/kotlin_solutions/: build.gradle
2021/: .gitignore  README.md
2022/: Cargo.toml  README.md
2022/advent_of_code_lib/: Cargo.toml
2022/boilerplate/: Cargo.toml
2022/day01/: Cargo.toml
2022/day02/: Cargo.toml
2022/day04/: Cargo.toml
2022/day07/: Cargo.toml
2022/day09/: Cargo.toml
2022/day11/: Cargo.toml
2022/day15/: Cargo.toml
2022/day16/: Cargo.toml
2022/day17/: Cargo.toml
2022/day21/: Cargo.toml  working_out.txt
2022/day22/: Cargo.toml  cube.blend
2022/day23/: Cargo.toml
2022/day24/: Cargo.toml
2022/day3/: Cargo.toml
2023/: .gitignore  Cargo.toml  README.md
2023/boilerplate/: Cargo.toml
2023/day01/: Cargo.toml  main.hs
2023/day02/: Cargo.toml  day02.cabal
2023/day03/: Cargo.toml  day03.cabal
2023/day04/: Cargo.toml  day04.cabal
2023/day05/: Cargo.toml  day05.cabal
2023/day06/: Cargo.toml  day06.cabal
2023/day06/app/: Main.hs
2023/day07/: Cargo.toml  day07.cabal
2023/day08/: Cargo.toml  day08.cabal
2023/day10/: Cargo.toml  day.cabal
2023/day11/: Cargo.toml
2023/day12/: Cargo.toml
2023/day13/: Cargo.toml
2023/day14/: Cargo.toml
2023/day15/: Cargo.toml
2023/day16/: Cargo.toml
2023/day17/: Cargo.toml
2023/day18/: Cargo.toml
2023/day19/: Cargo.toml
2023/day20/: Cargo.toml
2023/day22/: Cargo.toml
2023/day25/: Cargo.toml
2023/haskell/: day.cabal
2023/haskell/app/: Main.hs
2024/: .gitignore
2024/day3/: LICENSE  haskell.cabal
2024/src/: day2.zig
2025/: advent.go  day1.go  go.mod
2025/day/: day.go
2025/day01/: day01.go
2025/day02/: day02.go
utils/: Cargo.toml
(+168 files in other folders)
