cabal-version:   3.0
name:            day06
version:         0.1.0.0
license:         BSD-2-Clause
license-file:    LICENSE
maintainer:      33922797+SleepySwords@users.noreply.github.com
author:          Ibby
build-type:      Simple
extra-doc-files: CHANGELOG.md

executable day06
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ^>=4.17.2.0,
        split
