cabal-version:      3.0

name:               day

version:            0.1.0.0

-- The package author(s).
author:             Ibby

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:         33922797+SleepySwords@users.noreply.github.com

-- A copyright notice.
-- copyright:
build-type:         Simple

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable day08
    -- Import common warning flags.
    import:           warnings

    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:    base ^>=4.17.2.0, split, containers, unordered-containers

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: Haskell2010
